# game_boy_emulator

./: CMakeLists.txt  README.md
gbemu/: CMakeLists.txt  main.c
include/: bus.h  cart.h  common.h  cpu.h  emu.h  instructions.h  ppu.h  timer.h
lib/: CMakeLists.txt  bus.c  cart.c  cpu.c  cpu_fetch.c  cpu_proc.c  cpu_util.c  emu.c  instructions.c  ppu.c  timer.c
tests/: check_gbe.c
